# McLaren

./: CMakeLists.txt  README.md  perfomance_report.md
.github/workflows/: ci.yml
engine/: CMakeLists.txt  camera.cpp  camera.h  components.h  engine.cpp  engine.h  entity.cpp  entity.h  image_manager.cpp  image_manager.h  input.cpp  input.h  loop.h  render.cpp  render.h  render_frame.h  renderer.h  serializable_world.cpp  serializable_world.h  systems.cpp  systems.h  texture.cpp  texture.h  tile.h  utils.h  world.h
engine/core/: ReadMe.md  render.cpp  render.h  render_frame.h
engine/ecs/: systems.cpp  world_loader.cpp
engine/tests/: CMakeLists.txt  camera_test.cpp  system_animation_test.cpp  system_createNPC_test.cpp  system_create_entities_test.cpp  system_input_test.cpp  system_movement_test.cpp  system_npc_movement_logic_test.cpp
game/: game_world.cpp  game_world.h  main.cpp
game/assets/worlds/: 1.json  meadow.json
game/entities/: player.cpp  player.h
game/loops/: game_loop.cpp  game_loop.h
scripts/: build.sh  formatter.sh  linter.sh
src/: main.cpp
